--- a/RecheckApps/app/src/main/res/values/themes.xml
+++ b/RecheckApps/app/src/main/res/values/themes.xml
@@ -23,7 +23,7 @@
         <item name="android:textSize">20sp</item>
     </style>
 
-    <style name="Widget.App.Button.OutlinedButton.IconOnly" parent="Widget.MaterialComponents.Button.OutlinedButton">
+    <style name="Widget.App.Button.OutlinedButton.IconOnly" parent="Widget.MaterialComponents.Button">
         <item name="iconPadding">0dp</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
