--- a/RecheckApps/app/src/main/res/layout/activity_result.xml
+++ b/RecheckApps/app/src/main/res/layout/activity_result.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white_back"
     tools:context=".ui.result.ResultActivity">
 
     <com.google.android.material.appbar.AppBarLayout
