--- a/RecheckApps/app/src/main/res/layout/activity_newes.xml
+++ b/RecheckApps/app/src/main/res/layout/activity_newes.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_back"
+    android:background="?attr/background"
     tools:context=".ui.newes.NewesActivity">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -57,8 +57,11 @@
                         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
 
                         <com.google.android.material.textfield.TextInputEditText
+                            android:id="@+id/input_name_estimation"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
+                            android:singleLine="true"
+                            android:imeOptions="actionDone"
                             android:textSize="14sp"/>
 
                     </com.google.android.material.textfield.TextInputLayout>
@@ -99,7 +102,7 @@
                         android:src="@drawable/ic_baseline_add_24"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent"
-                        app:tint="@color/black" />
+                        app:tint="?attr/tint" />
 
                     <TextView
                         android:id="@+id/tv_id"
@@ -108,7 +111,6 @@
                         android:layout_marginStart="20dp"
                         android:text="@string/add_item"
                         android:textSize="18sp"
-                        android:textColor="@color/black"
                         app:layout_constraintStart_toEndOf="@id/ic_add"
                         app:layout_constraintTop_toTopOf="parent" />
 
