--- a/RecheckApps/app/src/main/res/values-night/themes.xml
+++ b/RecheckApps/app/src/main/res/values-night/themes.xml
@@ -12,9 +12,11 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="background">@color/black</item>
+        <item name="tint">@color/white</item>
     </style>
 
-    <style name="Widget.App.Button.OutlinedButton.IconOnly" parent="Widget.MaterialComponents.Button.OutlinedButton">
+    <style name="DeleteButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
         <item name="iconPadding">0dp</item>
         <item name="android:insetTop">0dp</item>
         <item name="android:insetBottom">0dp</item>
@@ -22,5 +24,7 @@
         <item name="android:paddingRight">12dp</item>
         <item name="android:minWidth">48dp</item>
         <item name="android:minHeight">48dp</item>
+        <item name="strokeColor">@color/red_warning</item>
+        <item name="iconTint">@color/red_warning</item>
     </style>
 </resources>
