--- a/RecheckApps/app/src/main/res/layout/items_add.xml
+++ b/RecheckApps/app/src/main/res/layout/items_add.xml
@@ -32,6 +32,7 @@
                 app:layout_constraintTop_toTopOf="parent">
 
                 <AutoCompleteTextView
+                    android:id="@+id/spnItemName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:inputType="none"
@@ -50,6 +51,7 @@
                 app:layout_constraintTop_toBottomOf="@id/dd_items">
 
                 <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/etPrice"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:textSize="14sp"
