--- a/RecheckApps/app/src/main/res/xml/network_config.xml
+++ b/RecheckApps/app/src/main/res/xml/network_config.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
     <domain-config cleartextTrafficPermitted="true">
-        <trust-anchors>
-            <certificates src="system" />
-        </trust-anchors>
-        <domain includeSubdomains="true">http://34.126.110.154/</domain>
+        <domain includeSubdomains="true">34.126.110.154</domain>
+        <domain includeSubdomains="true">http://34.126.110.154/getItems</domain>
+        <domain includeSubdomains="true">http://34.126.110.154/predict</domain>
     </domain-config>
 </network-security-config>
